# plugin-freedom-system

./: .gitignore  CLAUDE.md  CMakeLists.txt  INDEX.md  LINUX-SUPPORT.md  PLUGINS.md  README.md  TWO-PHASE-PARAMETERS-IMPLEMENTATION.md  final-touches.md  first-principles-thinking-analysis.md
.claude/: CLAUDE.md
.claude/aesthetics/: manifest.json
.claude/agents/: foundation-shell-agent.md  gui-agent.md  validation-agent.md
.claude/commands/: continue.md  doc-fix.md  install-plugin.md  show-standalone.md  troubleshoot-juce.md
.claude/docs/: integration-contracts.md
analyses/: master-optimization-roadmap.md
architecture/: 00-PHILOSOPHY.md  01-executive-summary.md  02-core-abstractions.md  04-component-architecture.md  10-extension-architecture.md  15-migration-notes.md  16-implementation-roadmap.md  FINAL-AUDIT-REPORT.md  README.md
docs/: skill-refactoring-report.md  validation-system-migration.md  validation-system-verification-report.txt
implementation-notes/: gui-optional-flow-spec.md  state-delegation-contract.md
plan/: phase-1-plan.md
prompts/: 002-architecture-final-audit.md  002-refactor-oversized-skill-files.md  003-analyze-architecture-procedure-mapping.md  005-create-documentation-index.md
scripts/: build-and-install.sh
skill-analysis/: CHECKLIST.md  aesthetic-dreaming-analysis.md  apply-ui-template-library-fixes.py  build-automation-analysis.md  context-resume-analysis.md  deep-research-analysis.md  design-sync-analysis.md  plugin-ideation-analysis.md  plugin-improve-analysis.md  plugin-lifecycle-analysis.md  plugin-planning-analysis.md  plugin-testing-analysis.md  plugin-workflow-analysis.md  system-setup-analysis.md  troubleshooting-docs-analysis.md  ui-mockup-analysis.md  ui-template-library-analysis.md
skills-audit/: plugin-packaging-before-after.md  ui-mockup-fixes-applied.md
(+172 files in other folders)
